--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,22 +13,33 @@ body {
 }
 
 .content-wrapper {
+    position: relative;
     width: 1050px;
     margin: 0 auto;
 }
 
 header {
+    position: relative;
     height: 545px;
-    /*background: url('/images/gplaypattern.png');*/
-    /*background-attachment: fixed;
-    background-position: center center;
-    background-size: cover;*/
+    background: url('/images/gplaypattern.png') no-repeat center center;
+    background-size: cover;
     padding: 20px 0 20px 0;
     width: 100%;
+    background-attachment: fixed;
     background-color: #0099ff;
 }
 
+.overlay {
+    background: rgba(0, 113, 205, 0.7);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
 header h1 {
+    text-transform: uppercase;
     color: #505050;
     display: inline-block;
     font-size: 2em;    
@@ -47,7 +58,7 @@ header nav ul li {
 header nav ul li a {
     padding-left: 15px;
     color: #505050;
-    font-size: 1.5em;
+    font-size: 2em;
     text-decoration: none;
 }
 
@@ -56,6 +67,7 @@ header nav ul li a:hover {
 }
 
 header h2 {
+    width: 100%;
     color: #fefefe;
     font-size: 6.28em;
     padding-top: 160px;
@@ -68,6 +80,7 @@ header h3 {
 }
 
 #primary-section {
+    position: relative;
     background-color: #eeeeee;
     background-color: #fefefe;
     padding: 80px 0 80px 0;
@@ -107,7 +120,7 @@ header h3 {
 }
 
 .post-sidebar {
-    float: right;
+    position: right;
     margin-left: 30px;
     display: inline-block;
     width: 300px;
@@ -214,21 +227,141 @@ footer p {
     border-left: 1px solid #fefefe;
 }
 
-/*
-@media (max-width: 1169px) {
-    header h1 {
-        font-size: 75px;
+@media (max-width: 1080px) { 
+    
+    .content-wrapper {
+        position: relative;
+        width: 900px;
+        margin: 0 auto;
     }
+
+    header h2 {
+        color: #fefefe;
+        font-size: 5.28em;
+        padding-top: 160px;
+        text-shadow: 1px 1px 1px #505050;
+        text-align: center;
+    }
+
+    .post-article {
+        display: inline-block;
+        width: 500px;
+        padding-right: 30px;
+    }
+
 }
 
-@media (max-width: 900px) {
-    header h1 {
-        font-size: 55px;
+@media (max-width: 930px) {
+    
+    .content-wrapper {
+        position: relative;
+        width: 700px;
+        margin: 0 auto;
     }
+
+    header h2 {
+        color: #fefefe;
+        font-size: 4em;
+        padding-top: 160px;
+        text-shadow: 1px 1px 1px #505050;
+        text-align: center;
+    }
+
+    .post-article {
+        display: inline-block;
+        width: 300px;
+        padding-right: 30px;
+    }
+
 }
 
-@media (max-width: 600px) {
-    header h1 {
-        font-size: 35px;
+@media (max-width: 750px) {
+
+    .content-wrapper {
+        position: relative;
+        width: 500px;
+        margin: 0 auto;
     }
-}*/
+
+    header {
+        position: relative;
+        height: 445px;
+        background: url('/images/gplaypattern.png') no-repeat center center;
+        background-size: cover;
+        padding: 20px 0 20px 0;
+        width: 100%;
+        background-attachment: fixed;
+        background-color: #0099ff;
+    }
+
+    header h2 {
+        color: #fefefe;
+        font-size: 2.9em;
+        padding-top: 160px;
+        text-shadow: 1px 1px 1px #505050;
+        text-align: center;
+    }    
+
+    .post-article {
+        width: 100%;
+    }
+
+    .post-sidebar {
+        margin: 5px 0 0 0;
+        padding: 0;
+        width: 100%;
+    }
+
+    .sidebar-author-heading {
+        margin-top: 40px;
+        text-align: center;
+        font-size: 1.5em;
+        color: #0099ff;
+    }
+
+    .footer-nav {
+        margin: 0;
+        padding: 0;
+        display: block;
+    }
+
+}
+
+@media (max-width: 540px) {
+
+    .content-wrapper {
+        position: relative;
+        width: 350px;
+        margin: 0 auto;
+    }
+
+    header {
+        position: relative;
+        height: 445px;
+        background: url('/images/gplaypattern.png') no-repeat center center;
+        background-size: cover;
+        padding: 20px 0 20px 0;
+        width: 100%;
+        background-attachment: fixed;
+        background-color: #0099ff;
+    }
+
+
+    header h2 {
+        color: #fefefe;
+        font-size: 1.9em;
+        padding-top: 160px;
+        text-shadow: 1px 1px 1px #505050;
+        text-align: center;
+    }    
+
+    .post-article {
+        width: 100%;
+    }
+
+    .post-sidebar {
+        width: 100%;
+    }
+
+
+}
