--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -319,9 +319,16 @@ footer p {
         color: #0099ff;
     }
 
+    .sub-section h2 {
+        padding: 30px 0 30px 0;
+        text-align: center;
+        font-size: 2.5em;
+    }
+
     .footer-nav {
-        margin: 0;
+        margin: 10px 0 0 0;
         padding: 0;
+        float: left;
         display: block;
     }
 
@@ -361,6 +368,12 @@ footer p {
 
     .post-sidebar {
         width: 100%;
+    }
+
+    .sub-section h2 {
+        padding: 30px 0 30px 0;
+        text-align: center;
+        font-size: 1.5em;
     }
 
 
